change extension, because files get excluded from npm

--- a/react/babel.config.json
+++ b/react/babel.config.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../core/.babelrc",
+  "extends": "../core/babel.config.json",
   "plugins": [
     ["transform-imports", {
       "@fortawesome/free-solid-svg-icons": {
