--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zvs001/babel-config",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-plugin-direct-import": "^1.0.0",
     "babel-plugin-transform-imports": "^2.0.0",
-    "metro-react-native-babel-preset": "^0.71.3"
+    "metro-react-native-babel-preset": "^0.71.3",
+    "root-require-utils": "^0.0.1"
   }
 }
