--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/babel-plugin": "^11.11.0",
     "babel-plugin-direct-import": "^1.0.0",
     "babel-plugin-transform-imports": "^2.0.0",
-    "metro-react-native-babel-preset": "^0.71.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "root-require-utils": "^0.0.1"
   }
 }
